--- a/front/src/app/component/navbar/navbar.component.html
+++ b/front/src/app/component/navbar/navbar.component.html
@@ -5,34 +5,32 @@
     </div>
   
     <!-- Search Bar -->
-    <div class="search-bar">
-      <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-      <i class="fa-solid fa-magnifying-glass"></i>
-    </div>
-  
+    <app-search-input></app-search-input>
+    
+    <!-- navLinks -->
     <ul class="nav-links">
       <li>
         <a routerLink="">
           <i class="fa-solid fa-house-chimney"></i>
-          <span>home</span>
+          <p>home</p>
         </a>
       </li>
       <li>
         <a routerLink="/recipes">
           <i class="fa-solid fa-utensils"></i>
-          <span>recipes</span>
+          <p>recipes</p>
         </a>
       </li>
       <li>
         <a routerLink="/about">
           <i class="fa-solid fa-people-group"></i>
-          <span>about</span>
+          <p>about</p>
         </a>
       </li>
       <li>
         <a routerLink="/profile">
           <i class="fa-solid fa-user"></i>
-          <span>profile</span>
+          <p>profile</p>
         </a>
       </li>
   
@@ -40,7 +38,7 @@
       <li>
         <a data-bs-toggle="modal" data-bs-target="#loginModal">
           <i class="fa-solid fa-right-to-bracket"></i>
-          <span>login</span>
+          <p>login</p>
         </a>
       </li>
   
