--- a/front/src/app/component/single-recipe/single-recipe.component.css
+++ b/front/src/app/component/single-recipe/single-recipe.component.css
@@ -7,6 +7,13 @@ h1,h2,h3,h4,h5,p{
   padding: 0;
 }
 
+.title {
+  font-family: var(--main-font);
+  color: var(--main-color);
+  font-size: 32px;
+  font-weight: 800;
+}
+
 
 /* recipe hero ========================= */
 .recipe-title{
@@ -28,7 +35,6 @@ h1,h2,h3,h4,h5,p{
 }
 
 .favorite{
-  cursor: pointer;
   color: var(--main-color);
 }
 
@@ -36,6 +42,32 @@ h1,h2,h3,h4,h5,p{
   .recipe-title {
     font-size: 22px;
   }
+}
+
+.servings {
+  color: var(--main-color);
+  font-family: var(--main-font);
+}
+
+.servings button {
+  width: 60px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: bolder;
+  border: 1px solid var(--main-color);
+  color: var(--main-color);
+}
+
+.servings button:hover {
+  border: 1px solid var(--btn-color);
+  color: var(--btn-color);
+}
+
+.servings button:active,
+.servings button.selected {
+  background-color: var(--btn-color);
+  border: 1px solid var(--btn-color);
+  color: #fff;
 }
 
 /* recipe how to ========================= */
@@ -58,10 +90,32 @@ h1,h2,h3,h4,h5,p{
   color: var(--main-color);
 }
 
-.how-to .star-icon{
-  cursor: pointer;
+.how-to .rating-tools{
   color: var(--main-color);
 }
+
+.how-to .favorite,
+.how-to .star-icon{
+  cursor: pointer;
+  transition: .2s ease all;
+}
+.how-to .favorite:hover,
+.how-to .star-icon:hover{
+  color: var(--btn-color);
+}
+.how-to .favorite:active,
+.how-to .star-icon:active{
+  transform: scale(1.5);
+}
+
+.how-to .favorite.fa-solid,
+.how-to .star-icon.fa-solid {
+  color: var(--btn-color);
+}
+
+/* .how-to .star-icon{
+  cursor: pointer;
+} */
 
 @media (width < 1100px) {
   .how-to .title {
@@ -81,6 +135,11 @@ h1,h2,h3,h4,h5,p{
   font-size: 24px;
   color: var(--main-color);
   font-family: var(--main-font);
+}
+
+.related-recipes .time {
+  color: var(--main-color);
+  
 }
 
 @media (width < 1100px) {
