--- a/front/src/app/component/navbar/navbar.component.html
+++ b/front/src/app/component/navbar/navbar.component.html
@@ -29,15 +29,15 @@
           <span>about</span>
         </a>
       </li>
-      <li>
-        <a routerLink="/profile">
+      <li *ngIf="isLogged">
+        <a routerLink="/profile/{{ UserId }}">
           <i class="fa-solid fa-user"></i>
-          <span>profile</span>
+          <span>Profile</span>
         </a>
       </li>
   
       <!-- Login -->
-      <li>
+      <li li *ngIf="!isLogged">
         <a data-bs-toggle="modal" data-bs-target="#loginModal">
           <i class="fa-solid fa-right-to-bracket"></i>
           <span>login</span>
@@ -52,8 +52,8 @@
             </div>
             <div class="modal-body">
               <app-login></app-login>
-              <p class="mt-4 switch">Already have account!
-                <a class="switchCard" data-bs-toggle="modal" data-bs-target="#registerModal">Register</a>
+              <p class="mt-4 switch">Don't hava account!
+                <a class="switchCard" data-bs-toggle="modal" data-bs-target="#registerModal" data-bs-dismiss="modal">Register</a>
               </p>
             </div>
           </div>
@@ -61,7 +61,7 @@
       </div> 
   
       <!-- Register -->
-      <li>
+      <li li *ngIf="!isLogged">
         <a data-bs-toggle="modal" data-bs-target="#registerModal">
           <i class="fa-solid fa-right-to-bracket"></i>
           <span>register</span>
@@ -76,13 +76,20 @@
             </div>
             <div class="modal-body">
               <app-register></app-register>
-              <p class="mt-4 switch">Don't hava account!
-                <a class="switchCard" data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>
+              <p class="mt-4 switch">Already have account!
+                <a class="switchCard"  data-bs-toggle="modal" data-bs-target="#loginModal" data-bs-dismiss="modal">Login</a>
               </p>
             </div>
           </div>
         </div>
       </div>
+
+      <li li *ngIf="isLogged">
+        <a (click)="logout()">
+          <i class="fa-solid fa-right-from-bracket"></i>
+          <span>Logout</span>
+        </a>
+      </li>
   
     </ul>
   </div>
