--- a/front/src/app/component/register/register.component.html
+++ b/front/src/app/component/register/register.component.html
@@ -75,20 +75,23 @@
     <!-- Gender -->
     <div class="genderCheck form-group">
         <div class="form-check">
-            <input class="form-check-input" type="radio" id="male" formControlName="gender" value="Male">
+            <input class="form-check-input" type="radio" id="male" formControlName="gender" value="male">
             <label class="form-check-label" for="male">Male</label>
         </div>
         <div class="form-check">
-            <input class="form-check-input" type="radio" id="female" formControlName="gender" value="Female">
+            <input class="form-check-input" type="radio" id="female" formControlName="gender" value="female">
             <label class="form-check-label" for="female">Female</label>
         </div>
     </div>
     @if (registerForm.controls['gender'].errors?.['required'] && registerForm.controls['gender'].touched) {
         <small id="genderHelp" class="form-text text-danger">Please select your gender.</small>
     }
+    @if(notvalid){
+        <div class="mb-2"><span class="text-danger fw-normal">All Fields are required </span></div>
+      }
 
     <!-- Submit Btn -->
     <button type="submit" class="btn btn-auth mt-4 d-flex" [disabled]="registerForm.invalid ||
-        registerForm.controls['pass'].value  != registerForm.controls['confirmPass'].value">Register
+        registerForm.controls['pass'].value  != registerForm.controls['confirmPass'].value" data-bs-dismiss="modal">Register
     </button>
 </form>
