handle search function in search component

--- a/front/src/app/component/search-input/search-input.component.html
+++ b/front/src/app/component/search-input/search-input.component.html
@@ -3,7 +3,7 @@
     <div class="search-bar">
         <i class="fa-solid fa-magnifying-glass search"></i>
         <input class="form-control" type="text" placeholder="Search for recipes..." aria-label="Search"
-            [(ngModel)]="searchQuery" (input)="onSearch()"
+            [(ngModel)]="searchQuery" (input)="search(searchQuery)"
         >
         <i class="fa-solid fa-x clear" (click)="onClear()"></i>
     </div>
@@ -11,10 +11,11 @@
     <div *ngIf="(searchResults$ | async)?.length as resultsLength" class="dropdown-list">
       <ul *ngIf="resultsLength > 0">
         <li *ngFor="let result of searchResults$ | async" class="dropdown-item">
-            <img [src]="result.img" alt="{{ result.name }}" />
+            <img [src]="result.image" alt="{{ result.name }}" />
             <p>{{ result.name }}</p>
             <!-- <p>{{ result.category }}</p> -->
         </li>
         </ul>
+
     </div>
 </div>
