--- a/front/src/app/component/home/home.component.html
+++ b/front/src/app/component/home/home.component.html
@@ -90,6 +90,7 @@
                         <a href="">
                             <img class="img-fluid rounded-3 object-fit-cover w-100" [src]="latestRecipe.image" alt="" style="height:330px;">
                             <div class="mt-3">
+                                <p>{{latestRecipe.id}}</p>
                                 <h5>{{latestRecipe.name}}</h5>
                                 <p>{{latestRecipe.category.name}}</p>
                             </div>
@@ -125,12 +126,13 @@
 <section class="recipes p-5">
     <div class="container">
         <div class="row">
-            @for (recipe of getRandomRecipes(4); track $index ) {
+            @for (recipe of randomRecipesArr; track $index ) {
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="latestContent">
                         <a href="">
                             <img class="img-fluid rounded-3 object-fit-cover w-100" [src]="recipe.image" alt="" style="height: 330px;">
                             <div class="mt-3">
+                                <!-- <p>{{recipe.id}}</p> -->
                                 <h5>{{recipe.name}}</h5>
                                 <p>{{recipe.category.name}}</p>
                             </div>
