--- a/front/src/app/component/navbar/navbar.component.css
+++ b/front/src/app/component/navbar/navbar.component.css
@@ -26,7 +26,7 @@ li{
   position: absolute;
   top: 47%;
   right: 3%;
-  font-size: 20px;
+  font-size: 16px;
   color: var(--main-color);
   transform: translateY(-50%);
 }
@@ -47,23 +47,26 @@ li{
 
 .nav-links a {
   text-decoration: none;
-  color: black;
   text-transform: capitalize;
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: var(--main-color)
+}
+
+.nav-links a:hover,
+.nav-links a.active {
+  color: var(--btn-color);
 }
 
 .nav-links i {
   font-size: 20px;
-  color: var(--main-color);
 }
 
 .nav-links span{
   margin-top: 4px;
-  color: var(--btn-color);
   font-weight: 500;
-  font-size: 20px;
+  font-size: 16px;
 }
 /* .search-menu {
   display: flex;
