--- a/front/src/app/component/navbar/navbar.component.html
+++ b/front/src/app/component/navbar/navbar.component.html
@@ -62,7 +62,7 @@
       <li>
         <a data-bs-toggle="modal" data-bs-target="#registerModal">
           <i class="fa-solid fa-right-to-bracket"></i>
-          <span>register</span>
+          <p>register</p>
         </a>
       </li>
   
