--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
 
 :root{
   --main-background: #f9f9ff;
@@ -29,7 +31,7 @@ p{
 
 /* Login & Register */
 
-form{
+.auth {
   text-align: center;
   padding: 0 30px;
 }
