--- a/front/src/app/component/home/home.component.html
+++ b/front/src/app/component/home/home.component.html
@@ -79,8 +79,8 @@
         <div class="row">
             <div class="latestRecipes d-flex justify-content-between mb-5">
                 <h1>Latest Recipes</h1>
-                <div class="allLatest d-flex gap-3 align-items-end">
-                    <p>View All Latest</p>
+                <div class="allLatest d-flex gap-3 align-items-end" style="cursor: pointer;">
+                    <p routerLink="/recipes">View All Latest</p>
                     <i class="fa-solid fa-arrow-right"></i>
                 </div>
             </div>
