--- a/front/src/app/component/login/login.component.html
+++ b/front/src/app/component/login/login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="LoginForm" (ngSubmit)="loginSender()">
+<form [formGroup]="LoginForm" (ngSubmit)="loginSender()" class="auth">
     <!-- Email -->
     <div class="form-group">
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" 
