--- a/front/src/app/component/search-input/search-input.component.html
+++ b/front/src/app/component/search-input/search-input.component.html
@@ -11,7 +11,7 @@
     <div *ngIf="(searchResults$ | async)?.length as resultsLength" class="dropdown-list">
       <ul *ngIf="resultsLength > 0">
         <li *ngFor="let result of searchResults$ | async" class="dropdown-item">
-            <img [src]="result.image" alt="{{ result.name }}" />
+            <img [src]="result.image" alt="" />
             <p>{{ result.name }}</p>
             <!-- <p>{{ result.ingerdiants.name }}</p> -->
         </li>
