--- a/front/src/app/component/register/register.component.html
+++ b/front/src/app/component/register/register.component.html
@@ -158,7 +158,7 @@
   }
 
   @if(notvalid){
-    <div class="mb-2"><span class="text-danger fw-normal text-capitalize">email is taken</span></div>
+    <div class="mb-2"><span class="text-danger fw-normal text-capitalize">{{notvalid}}</span></div>
   }
   <!-- Submit Btn -->
   <button
