--- a/front/src/app/component/login/login.component.html
+++ b/front/src/app/component/login/login.component.html
@@ -21,6 +21,8 @@
            class="form-text text-danger">Please add your password.</small>
     <small *ngIf="LoginForm.controls['password'].errors?.['pattern'] && !LoginForm.controls['password'].errors?.['required']" 
            class="form-text text-danger">Password must be at least 6 characters long and include one lowercase letter, one uppercase letter, one digit, and one special character.</small>
-
-    <button type="submit" class="btn btn-auth mt-4 d-flex" [disabled]="LoginForm.invalid" data-bs-dismiss="modal">Login</button>
+           @if(invalid){
+            <div class="mb-2"><span class="text-danger fw-normal text-capitalize">{{invalid}}</span></div>
+          }
+    <button type="submit" class="btn btn-auth mt-4 d-flex" [disabled]="LoginForm.invalid" >Login</button>
 </form>
