--- a/front/src/app/component/home/home.component.css
+++ b/front/src/app/component/home/home.component.css
@@ -633,3 +633,10 @@ video {
         padding: 15px;
     }
 }
+.dark-mode .navbar{
+    background-color: #121212;
+      
+  }
+  .dark-mode .home-banner .banner-left{
+    position: relative;
+  }
