--- a/front/src/app/component/navbar/navbar.component.html
+++ b/front/src/app/component/navbar/navbar.component.html
@@ -1,13 +1,10 @@
-<nav class="navbar">
+<nav class="navbar ">
   <div class="logo">
     <img src="assets/image/logo.png" alt="Logo">
   </div>
 
   <!-- Search Bar -->
-  <div class="search-bar">
-    <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-    <img  class="searchicon" src="assets/image/search.svg" alt="Search">
-  </div>
+ <app-search></app-search>
 
   <ul class="nav-links">
     <li>
@@ -35,4 +32,27 @@
       </a>
     </li>
   </ul>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+     
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+           
+          </li>
+          <!-- Other nav links -->
+        </ul>
+        <!-- Dark mode toggle button -->
+        <button class="btn btn-dark" (click)="toggleDarkMode()">Dark Mode</button>
+        
+      </div>
+    </div>
+    
+  </nav>
+  
+  
+  
 </nav>
