removes mins from html cards in recipes

--- a/front/src/app/component/recipes/recipes.component.html
+++ b/front/src/app/component/recipes/recipes.component.html
@@ -110,7 +110,7 @@
         <div class="d-flex justify-content-between">
           <div class="d-flex">
             <i class="fa fa-clock-o" style="font-size:24px"></i>
-            <p class="inline-block px-2" style="color: #666;">{{item.time}} mins</p>
+            <p class="inline-block px-2" style="color: #666;">{{item.time}}</p>
           </div>
         </div>
       </div>
