--- a/front/src/app/component/admin/admin.component.css
+++ b/front/src/app/component/admin/admin.component.css
@@ -5,13 +5,17 @@
     flex-direction: column;
     gap: 15px;
     cursor: pointer;
+    color: var(--main-color);
+    font-size: 20px;
+    font-family: var(--main-font);
+    font-weight: 500;
 }
 
 .sidebar a{
     transition: all 0.3s;
 }
 .sidebar a:hover{
-    color: #645b4a;
+    color: var(--second-color);
 }
 
 .sidebar::after{
@@ -19,13 +23,26 @@
     top: 14%;
     left: 20%;
     width: 5px;
-    height: 60%;
+    height: 65%;
     content: "";
     background-color: var(--third-color);
 }
 
 .active{
     background-color:#756f64;
+}
+
+.dataName{
+    color: var(--main-color);
+    font-family: var(--main-font);
+    font-weight: 500;
+}
+.titleTable th{
+    color: var(--second-color);
+    font-family: var(--titleReciepe-font);
+}
+.dataTable td{
+    font-size: 18px;
 }
 
 @media (max-width: 945px){
