--- a/front/src/app/component/admin/admin.component.html
+++ b/front/src/app/component/admin/admin.component.html
@@ -13,12 +13,12 @@
     <div class="col-md-9 col-12 table" *ngIf="activeSection === 'users'">
         <p-table [value]="recipesArr" [paginator]="true" [rows]="4">
             <ng-template pTemplate="caption">
-                <div class="flex align-items-center justify-content-between fs-3" style="color: var(--main-color);">
+                <div class="flex align-items-center justify-content-between fs-3 dataName">
                     Users
                 </div>
             </ng-template>
             <ng-template pTemplate="header">
-                <tr>
+                <tr class="titleTable">
                     <th>Id</th>
                     <th>Name</th>
                     <th>Email</th>
@@ -27,12 +27,12 @@
                 </tr>
             </ng-template>
             <ng-template pTemplate="body" let-data>
-                <tr>
+                <tr class="dataTable">
                     <td>{{ data.id }}</td>
                     <td>{{ data.name }}</td>
                     <td>{{ data.user_id }}</td>
-                    <td><i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);"></i></td>
-                    <td><i class="fa-solid fa-trash text-danger"></i></td>
+                    <td class="text-center"><i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);"></i></td>
+                    <td class="text-center"><i class="fa-solid fa-trash text-danger"></i></td>
                 </tr>
             </ng-template>
         </p-table>
@@ -42,12 +42,12 @@
     <div class="col-md-9 col-12 table" *ngIf="activeSection === 'recipes'">
         <p-table [value]="recipesArr" [paginator]="true" [rows]="4">
             <ng-template pTemplate="caption">
-                <div class="flex align-items-center justify-content-between fs-3" style="color: var(--main-color);">
+                <div class="flex align-items-center justify-content-between fs-3 dataName">
                     Recipes
                 </div>
             </ng-template>
             <ng-template pTemplate="header">
-                <tr>
+                <tr class="titleTable">
                     <th>Id</th>
                     <th>Image</th>
                     <th>Name</th>
@@ -57,15 +57,19 @@
                 </tr>
             </ng-template>
             <ng-template pTemplate="body" let-data>
-                <tr>
+                <tr class="dataTable">
                     <td>{{ data.id }}</td>
                     <td>
                         <img [src]="data.image" [alt]="data.name" width="100" class="shadow-4" />
                     </td>
                     <td>{{ data.name }}</td>
                     <td>{{ data.user_id }}</td>
-                    <td><i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);"></i></td>
-                    <td><i class="fa-solid fa-trash text-danger"></i></td>
+                    <td class="text-center">
+                        <i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);" (click)="editRecipe(data)"></i>
+                    </td>
+                    <td class="text-center">
+                        <i class="fa-solid fa-trash text-danger"></i>
+                    </td>
                 </tr>
             </ng-template>
         </p-table>
@@ -75,12 +79,12 @@
     <div class="col-md-9 col-12 table" *ngIf="activeSection === 'pendingRecipes'">
         <p-table [value]="recipesArr" [paginator]="true" [rows]="4">
             <ng-template pTemplate="caption">
-                <div class="flex align-items-center justify-content-between fs-3" style="color: var(--main-color);">
+                <div class="flex align-items-center justify-content-between fs-3 dataName">
                     Pending Recipes
                 </div>
             </ng-template>
             <ng-template pTemplate="header">
-                <tr>
+                <tr class="titleTable">
                     <th>Id</th>
                     <th>Image</th>
                     <th>Name</th>
@@ -92,17 +96,17 @@
                 </tr>
             </ng-template>
             <ng-template pTemplate="body" let-data>
-                <tr>
+                <tr class="dataTable">
                     <td>{{ data.id }}</td>
                     <td>
                         <img [src]="data.image" [alt]="data.name" width="100" class="shadow-4" />
                     </td>
                     <td>{{ data.name }}</td>
                     <td>{{ data.user_id }}</td>
-                    <td><i class="fa-solid fa-check" style="color: var(--main-color);"></i></td>
-                    <td><i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);"></i></td>
-                    <td><i class="fa-solid fa-trash text-danger"></i></td>
-                    <td><i class="fa-solid fa-ban" style="color: var(--second-color);"></i></td>
+                    <td class="text-center"><i class="fa-solid fa-check" style="color: var(--main-color);"></i></td>
+                    <td class="text-center"><i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);"></i></td>
+                    <td class="text-center"><i class="fa-solid fa-trash text-danger"></i></td>
+                    <td class="text-center"><i class="fa-solid fa-ban" style="color: var(--second-color);"></i></td>
                 </tr>
             </ng-template>
         </p-table>
