--- a/front/src/app/component/admin/admin.component.css
+++ b/front/src/app/component/admin/admin.component.css
@@ -1,5 +1,4 @@
 
-
 .sidebar{
     display: flex;
     flex-direction: column;
@@ -9,6 +8,7 @@
     font-size: 20px;
     font-family: var(--main-font);
     font-weight: 500;
+    margin-right: 70px;
 }
 
 .sidebar a{
@@ -20,10 +20,10 @@
 
 .sidebar::after{
     position: absolute;
-    top: 14%;
+    top: -5%;
     left: 20%;
     width: 5px;
-    height: 65%;
+    height: 100%;
     content: "";
     background-color: var(--third-color);
 }
@@ -32,25 +32,9 @@
     background-color:#756f64;
 }
 
-.dataName{
-    color: var(--main-color);
-    font-family: var(--main-font);
-    font-weight: 500;
-}
-.titleTable th{
-    color: var(--second-color);
-    font-family: var(--titleReciepe-font);
-}
-.dataTable td{
-    font-size: 18px;
-}
-
 @media (max-width: 945px){
     .sidebar::after{
         content: none;
     }
 }
 
-.table{
-    width: fit-content;
-}
