--- a/front/src/app/component/admin/admin.component.html
+++ b/front/src/app/component/admin/admin.component.html
@@ -1,5 +1,5 @@
 
-<div class="container position-relative mt-5 p-2"></div>
+<div class="container position-relative mt-5 p-2">
     <div class="row mb-5">
         <div class="col-md-3 col-12 text-center">
             <div class="sidebar p-3">
@@ -10,107 +10,17 @@
         </div>
 
     <!-- User Section -->
-    <div class="col-md-9 col-12 table" *ngIf="activeSection === 'users'">
-        <p-table [value]="recipesArr" [paginator]="true" [rows]="4">
-            <ng-template pTemplate="caption">
-                <div class="flex align-items-center justify-content-between fs-3 dataName">
-                    Users
-                </div>
-            </ng-template>
-            <ng-template pTemplate="header">
-                <tr class="titleTable">
-                    <th>Id</th>
-                    <th>Name</th>
-                    <th>Email</th>
-                    <th>Edit</th>
-                    <th>Delete</th>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-data>
-                <tr class="dataTable">
-                    <td>{{ data.id }}</td>
-                    <td>{{ data.name }}</td>
-                    <td>{{ data.user_id }}</td>
-                    <td class="text-center"><i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);"></i></td>
-                    <td class="text-center"><i class="fa-solid fa-trash text-danger"></i></td>
-                </tr>
-            </ng-template>
-        </p-table>
+    <div class="col-md-9 col-12 " *ngIf="activeSection === 'users'">
+        <app-admin-user></app-admin-user>
     </div>
     
     <!-- Recipes Section -->
-    <div class="col-md-9 col-12 table" *ngIf="activeSection === 'recipes'">
-        <p-table [value]="recipesArr" [paginator]="true" [rows]="4">
-            <ng-template pTemplate="caption">
-                <div class="flex align-items-center justify-content-between fs-3 dataName">
-                    Recipes
-                </div>
-            </ng-template>
-            <ng-template pTemplate="header">
-                <tr class="titleTable">
-                    <th>Id</th>
-                    <th>Image</th>
-                    <th>Name</th>
-                    <th>UserName</th>
-                    <th>Edit</th>
-                    <th>Delete</th>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-data>
-                <tr class="dataTable">
-                    <td>{{ data.id }}</td>
-                    <td>
-                        <img [src]="data.image" [alt]="data.name" width="100" class="shadow-4" />
-                    </td>
-                    <td>{{ data.name }}</td>
-                    <td>{{ data.user_id }}</td>
-                    <td class="text-center">
-                        <i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);" (click)="editRecipe(data)"></i>
-                    </td>
-                    <td class="text-center">
-                        <i class="fa-solid fa-trash text-danger"></i>
-                    </td>
-                </tr>
-            </ng-template>
-        </p-table>
+    <div class="col-md-9 col-12" *ngIf="activeSection === 'recipes'">
+        <app-admin-recipes></app-admin-recipes>
     </div>
 
     <!-- Pending Recipes Section -->
-    <div class="col-md-9 col-12 table" *ngIf="activeSection === 'pendingRecipes'">
-        <p-table [value]="recipesArr" [paginator]="true" [rows]="4">
-            <ng-template pTemplate="caption">
-                <div class="flex align-items-center justify-content-between fs-3 dataName">
-                    Pending Recipes
-                </div>
-            </ng-template>
-            <ng-template pTemplate="header">
-                <tr class="titleTable">
-                    <th>Id</th>
-                    <th>Image</th>
-                    <th>Name</th>
-                    <th>UserName</th>
-                    <th>Accept</th>
-                    <th>Edit</th>
-                    <th>Delete</th>
-                    <th>Deny</th>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-data>
-                <tr class="dataTable">
-                    <td>{{ data.id }}</td>
-                    <td>
-                        <img [src]="data.image" [alt]="data.name" width="100" class="shadow-4" />
-                    </td>
-                    <td>{{ data.name }}</td>
-                    <td>{{ data.user_id }}</td>
-                    <td class="text-center"><i class="fa-solid fa-check" style="color: var(--main-color);"></i></td>
-                    <td class="text-center"><i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);"></i></td>
-                    <td class="text-center"><i class="fa-solid fa-trash text-danger"></i></td>
-                    <td class="text-center"><i class="fa-solid fa-ban" style="color: var(--second-color);"></i></td>
-                </tr>
-            </ng-template>
-        </p-table>
+    <div class="col-md-9 col-12" *ngIf="activeSection === 'pendingRecipes'">
+        <app-admin-pending-recipes></app-admin-pending-recipes>
     </div>
-
-
 </div>
