Handle delete function in admin recipes component

--- a/front/src/app/component/admin/admin-pending-recipes/admin-pending-recipes.component.html
+++ b/front/src/app/component/admin/admin-pending-recipes/admin-pending-recipes.component.html
@@ -1,5 +1,5 @@
 <!-- Pending Recipes Section -->
-<p-table [value]="recipes" [paginator]="true" [rows]="4">
+<p-table [value]="pendingRecipes" [paginator]="true" [rows]="4">
     <ng-template pTemplate="caption">
         <div class="flex align-items-center justify-content-between fs-3 dataName">
             Pending Recipes
