--- a/front/src/app/component/admin/admin-recipes/admin-recipes.component.css
+++ b/front/src/app/component/admin/admin-recipes/admin-recipes.component.css
@@ -24,3 +24,9 @@
 .modal-body input{
     width: 50%;
 }
+
+/* Delete Button */
+.delete .modal-footer{
+    border-top: none;
+    margin: auto;
+}
