--- a/front/src/app/component/admin/admin-recipes/admin-recipes.component.html
+++ b/front/src/app/component/admin/admin-recipes/admin-recipes.component.html
@@ -22,17 +22,16 @@
                 <img [src]="data.image" [alt]="data.name" width="100" class="shadow-4" />
             </td>
             <td>{{ data.name }}</td>
-            <td>{{ data.user.name}}</td>
+            <td>{{ data.user.name }}</td>
             
             <td class="text-center">
                 <!-- Button trigger modal -->
-                <a data-bs-toggle="modal" data-bs-target="#editmodal" style="cursor: pointer;"
-                    (click)="setSelectedRecipe(data)">
+                <a data-bs-toggle="modal" data-bs-target="#editmodal" style="cursor: pointer;">
                     <i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);"></i>
                 </a>
 
                 <!-- Modal -->
-                <div class="modal fade" id="editmodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <!-- <div class="modal fade" id="editmodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content">
                             <div class="modal-header">
@@ -57,7 +56,6 @@
                                     <label for="recipeImage" class="form-label">Image URL:</label>
                                     <input type="text" class="form-control" id="recipeImage" [(ngModel)]="selectedRecipe.image" />
                                 </div>
-
                             </div>
                             
                             <div class="modal-footer">
@@ -66,11 +64,29 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </td>
 
-            <td class="text-center">
-                <i class="fa-solid fa-trash text-danger"></i>
+            <!-- Delete Button -->
+            <td class="text-center delete">
+                <a data-bs-toggle="modal" data-bs-target="#deletemodal" style="cursor: pointer;">
+                    <i class="fa-solid fa-trash text-danger"></i>
+                </a>
+                
+                <div class="modal fade" id="deletemodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content"> 
+                            <div class="modal-body">
+                                <p class="mt-3 mb-0">Are you sure you want to delete this recipe?</p>
+                            </div>
+                            
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-tertiary" data-bs-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-danger" (click)="deleteRecipe(data.id)" data-bs-dismiss="modal">Delete Recipes</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </td>
         </tr>
     </ng-template>
