--- a/front/src/app/component/admin/admin-recipes/admin-recipes.component.html
+++ b/front/src/app/component/admin/admin-recipes/admin-recipes.component.html
@@ -81,7 +81,7 @@
                             </div>
                             
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-tertiary" data-bs-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancel</button>
                                 <button type="button" class="btn btn-danger" (click)="deleteRecipe(data.id)" data-bs-dismiss="modal">Delete Recipes</button>
                             </div>
                         </div>
