"recipes filter bug fixed"

--- a/front/src/app/component/add-recipe/add-recipe.component.html
+++ b/front/src/app/component/add-recipe/add-recipe.component.html
@@ -44,7 +44,7 @@
         class="form-control"
         id="time-field"
         placeholder="time"
-        formControlName="time"
+        formControlName="Enter Time in minutes"
       />
       @if(recipeForm.controls['time'].invalid &&
       recipeForm.controls['time'].touched){
