--- a/front/src/app/component/single-recipe/single-recipe.component.html
+++ b/front/src/app/component/single-recipe/single-recipe.component.html
@@ -56,7 +56,7 @@
     </div>
     <div class="time col-lg-4">
       <span class="h5 me-2"><i class="fa fa-clock-o"></i></span>
-      <span class="h5">{{ recipe.time }}</span>
+      <span class="h5">{{ recipe.time }} mins</span>
     </div>
   </div>
   <div class="how-to row mt-3 p-2">
