"rating function fixed"

--- a/front/src/app/component/add-recipe/add-recipe.component.html
+++ b/front/src/app/component/add-recipe/add-recipe.component.html
@@ -43,8 +43,9 @@
         type="text"
         class="form-control"
         id="time-field"
-        placeholder="time"
-        formControlName="Enter Time in minutes"
+        placeholder="Enter time in minutes"
+
+        formControlName="time"
       />
       @if(recipeForm.controls['time'].invalid &&
       recipeForm.controls['time'].touched){
