--- a/front/src/app/component/admin/admin-pending-recipes/admin-pending-recipes.component.html
+++ b/front/src/app/component/admin/admin-pending-recipes/admin-pending-recipes.component.html
@@ -1,10 +1,11 @@
-<!-- Pending Recipes Section -->
+<!-- Recipes Section -->
 <p-table [value]="pendingRecipes" [paginator]="true" [rows]="4">
     <ng-template pTemplate="caption">
         <div class="flex align-items-center justify-content-between fs-3 dataName">
             Pending Recipes
         </div>
     </ng-template>
+
     <ng-template pTemplate="header">
         <tr class="titleTable">
             <th>Id</th>
@@ -17,6 +18,7 @@
             <th>Deny</th>
         </tr>
     </ng-template>
+
     <ng-template pTemplate="body" let-data>
         <tr class="dataTable">
             <td>{{ data.id }}</td>
@@ -24,11 +26,44 @@
                 <img [src]="data.image" [alt]="data.name" width="100" class="shadow-4" />
             </td>
             <td>{{ data.name }}</td>
-            <td>{{ data.user_id }}</td>
-            <td class="text-center"><i class="fa-solid fa-check" style="color: var(--main-color);"></i></td>
-            <td class="text-center"><i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);"></i></td>
-            <td class="text-center"><i class="fa-solid fa-trash text-danger"></i></td>
-            <td class="text-center"><i class="fa-solid fa-ban" style="color: var(--second-color);"></i></td>
+            <td>{{ data.user.name }}</td>
+
+            <!-- Accept Button -->
+            <td class="text-center">
+                <i class="fa-solid fa-check" style="color: var(--main-color);"></i>
+            </td>
+
+            <!-- Edit Button -->
+            <td class="text-center">
+                <i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);"></i>
+            </td>
+
+            <!-- Delete Button -->
+            <td class="text-center delete">
+                <a data-bs-toggle="modal" data-bs-target="#deletePendingmodal" style="cursor: pointer;">
+                    <i class="fa-solid fa-trash text-danger"></i>
+                </a>
+                
+                <div class="modal fade" id="deletePendingmodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content"> 
+                            <div class="modal-body">
+                                <p class="mt-3 mb-0">Are you sure you want to delete this pending recipe?</p>
+                            </div>
+                            
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-danger" (click)="deletePendingRecipe(data.id)" data-bs-dismiss="modal">Delete Pending Recipe</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </td>
+
+            <!-- Deny Button -->
+            <td class="text-center">
+                <i class="fa-solid fa-ban" style="color: var(--second-color);"></i>
+            </td>
         </tr>
     </ng-template>
 </p-table>
