--- a/front/src/app/component/admin/admin-recipes/admin-recipes.component.html
+++ b/front/src/app/component/admin/admin-recipes/admin-recipes.component.html
@@ -24,13 +24,12 @@
             <td>{{ data.name }}</td>
             <td>{{ data.user.name }}</td>
             
+            <!-- Edit Button -->
             <td class="text-center">
-                <!-- Button trigger modal -->
                 <a data-bs-toggle="modal" data-bs-target="#editmodal" style="cursor: pointer;">
                     <i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);"></i>
                 </a>
 
-                <!-- Modal -->
                 <!-- <div class="modal fade" id="editmodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content">
@@ -82,7 +81,7 @@
                             
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancel</button>
-                                <button type="button" class="btn btn-danger" (click)="deleteRecipe(data.id)" data-bs-dismiss="modal">Delete Recipes</button>
+                                <button type="button" class="btn btn-danger" (click)="deleteRecipe(data.id)" data-bs-dismiss="modal">Delete Recipe</button>
                             </div>
                         </div>
                     </div>
