--- a/front/src/app/component/admin/admin-user/admin-user.component.html
+++ b/front/src/app/component/admin/admin-user/admin-user.component.html
@@ -11,8 +11,8 @@
             <th>Id</th>
             <th>Name</th>
             <th>Email</th>
-            <th>Edit</th>
-            <th>Delete</th>
+            <th class="text-center">Edit</th>
+            <th class="text-center">Delete</th>
         </tr>
     </ng-template>
     <ng-template pTemplate="body" let-data>
@@ -23,8 +23,27 @@
             <td class="text-center">
                 <i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);"></i>
             </td>
-            <td class="text-center">
-                <i class="fa-solid fa-trash text-danger"></i>
+
+            <!-- Delete Button -->
+            <td class="text-center delete">
+                <a data-bs-toggle="modal" data-bs-target="#deleteUsermodal" style="cursor: pointer;">
+                    <i class="fa-solid fa-trash text-danger"></i>
+                </a>
+                
+                <div class="modal fade" id="deleteUsermodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content"> 
+                            <div class="modal-body">
+                                <p class="mt-3 mb-0">Are you sure you want to delete this user?</p>
+                            </div>
+                            
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-danger" (click)="deleteUser(data.id)" data-bs-dismiss="modal">Delete User</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </td>
         </tr>
     </ng-template>
