--- a/front/src/app/component/single-recipe/single-recipe.component.html
+++ b/front/src/app/component/single-recipe/single-recipe.component.html
@@ -160,10 +160,10 @@
     </div>
   </div>
 
-  <div class="comments mt-5">
+  <div class="comments mt-5 mb-4 p-2">
     <h3 class="title text-uppercase">comments</h3>
     <div class="body mt-3 border-top">
-      <form  class="user-comment mt-5 text-start" [formGroup]="commentForm" (ngSubmit)="comment()">
+      <form  class="user-comment mt-5 text-start " [formGroup]="commentForm" (ngSubmit)="comment()">
         <textarea
           class="form-control"
           name="user-comment-field"
