test Delete pendingrecipes function

--- a/front/src/app/component/admin/admin-pending-recipes/admin-pending-recipes.component.html
+++ b/front/src/app/component/admin/admin-pending-recipes/admin-pending-recipes.component.html
@@ -26,7 +26,7 @@
                 <img [src]="data.image" [alt]="data.name" width="100" class="shadow-4" />
             </td>
             <td>{{ data.name }}</td>
-            <td>{{ data.id }}</td>
+            <td>{{ data.user.name }}</td>
 
             <!-- Accept Button -->
             <td class="text-center">
