--- a/front/src/app/component/admin/admin-pending-recipes/admin-pending-recipes.component.html
+++ b/front/src/app/component/admin/admin-pending-recipes/admin-pending-recipes.component.html
@@ -40,11 +40,11 @@
 
             <!-- Delete Button -->
             <td class="text-center delete">
-                <a data-bs-toggle="modal" data-bs-target="#deletePendingmodal" style="cursor: pointer;">
+                <a data-bs-toggle="modal"  [attr.data-bs-target]="'#deletePendingModal-' + data.id" style="cursor: pointer;">
                     <i class="fa-solid fa-trash text-danger"></i>
                 </a>
                 
-                <div class="modal fade" id="deletePendingmodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal fade" [attr.id]="'deletePendingModal-' + data.id" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content"> 
                             <div class="modal-body">
@@ -53,7 +53,7 @@
                             
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancel</button>
-                                <button type="button" class="btn btn-danger" (click)="deletePendingRecipe(data.id)" data-bs-dismiss="modal">Delete Pending Recipe</button>
+                                <button type="button" class="btn btn-danger" (click)="deletePendingRecipe(data.id)"  data-bs-dismiss="modal">Delete Pending Recipe</button>
                             </div>
                         </div>
                     </div>
@@ -62,7 +62,9 @@
 
             <!-- Deny Button -->
             <td class="text-center" (click)="denyRecipe(data.id)">
-                <i class="fa-solid fa-ban" style="color: var(--second-color);"></i>
+                <i class="fa-solid fa-ban"  
+                    [ngStyle]="{ color: data.status === 'denied' ? 'black' : 'var(--second-color)'}">
+                </i>
             </td>
         </tr>
     </ng-template>
