--- a/front/src/app/component/register/register.component.html
+++ b/front/src/app/component/register/register.component.html
@@ -1,6 +1,6 @@
 <form
   [formGroup]="registerForm"
-  (ngSubmit)="registerSender()"
+  (ngSubmit)="registerSender('registerModal')"
   class="pt-1 ps-4"
 >
   <!-- Name -->
