--- a/front/src/app/component/home/home.component.html
+++ b/front/src/app/component/home/home.component.html
@@ -41,34 +41,30 @@
 <section class="categories">
     <div class="container">
         <div class="row">
-            @for (category of categories; track $index) {
-                <div class="col-lg-3 col-md-6 col-sm-12 ">
-                    <div class="box position-relative">
-                        <a href="#">
-                            <img class="img-fluid object-fit-cover" [src]="category.img" alt="">
-                            <div class="categoryName">
-                                <h5>{{category.name}}</h5>
-                            </div>
-                        </a>
-                    </div>
+            <div *ngFor="let category of categories; let i = index" class="col-lg-3 col-md-6 col-sm-12">
+                <div class="box position-relative" (click)="categoryClicked(category.name)">
+                    <a >
+                        <img class="img-fluid object-fit-cover" [src]="category.img" alt="">
+                        <div class="categoryName">
+                            <h5>{{ category.name }}</h5>
+                        </div>
+                    </a>
                 </div>
-            }
+            </div>
         </div>
 
         <!-- SubCategories -->
         <div class="row mt-5 flex-container mb-5">
-            @for (subCategory of subCategories; track $index) {
-                <div class="col">
-                    <div class="smallBox position-relative text-center">
-                        <a href="#" class="text-decoration-none">
-                            <img class="img-fluid" [src]="subCategory.img" alt="">
-                            <div class="categoryName">
-                                <h5>{{subCategory.name}}</h5>
-                            </div>
-                        </a>
-                    </div>
+            <div *ngFor="let subCategory of subCategories; let i = index" class="col">
+                <div class="smallBox position-relative text-center" (click)="subcategoryClicked(subCategory.name)">
+                    <a class="text-decoration-none">
+                        <img class="img-fluid" [src]="subCategory.img" alt="">
+                        <div class="categoryName">
+                            <h5>{{ subCategory.name }}</h5>
+                        </div>
+                    </a>
                 </div>
-            }
+            </div>
         </div>
     </div>
 </section>
