--- a/front/src/app/component/single-recipe/single-recipe.component.css
+++ b/front/src/app/component/single-recipe/single-recipe.component.css
@@ -5,7 +5,7 @@
   font-size: 15px;
   font-weight: 600;
   background-color: var(--btn-color);
-  text-align: center;
+  text-align: right;
   color: #fff;
   border: 1px solid var(--btn-color);
   border-radius: 5px;
@@ -14,7 +14,7 @@
   box-shadow: -10px 10px 40px var(--boxShadow-color);
   margin: 20px auto 0;
   max-width: 200px;
-  float: right;
+
 }
 h1,h2,h3,h4,h5,p{
   margin: 0;
