"adding accept function in admin"

--- a/front/src/app/component/admin/admin-pending-recipes/admin-pending-recipes.component.html
+++ b/front/src/app/component/admin/admin-pending-recipes/admin-pending-recipes.component.html
@@ -30,7 +30,7 @@
 
             <!-- Accept Button -->
             <td class="text-center">
-                <i class="fa-solid fa-check" style="color: var(--main-color);"></i>
+                <i class="fa-solid fa-check" style="color: var(--main-color);" (click)="posttorecipe(data.id)"></i>
             </td>
 
             <!-- Edit Button -->
